# django-simplemfa

./: .gitignore  LICENSE  MANIFEST.in  README.md  SECURITY.md  requirements.txt  setup.cfg  setup.py
django_simplemfa.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
simplemfa/: constants.py  errors.py  forms.py  helpers.py  middleware.py  models.py  requirements.txt  structures.py  views.py
simplemfa/templates/simplemfa/: auth.html  auth_email.html  auth_text.html  auth_voice.html  mfa_base.html
