[django-simplemfa-base]
name = simplemfa
version = 0.3.2
description = A Django app to implement simple Multi-Factor Authentication (MFA) functions
long_description = file: README.rst
url = https://github.com/mwhawkins/django-simplemfa
author = Michael Hawkins
author_email = mhawkins@netizen.net
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.0.8
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
